--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="main.css"></head><body><h1>Welcome to Harp.</h1><h3>This is yours to own. Enjoy.</h3></body></html>
+<!DOCTYPE html><html><head><link rel="stylesheet" href="main.css"><script src="lib/typed.js"></script></head><body><div id="console"></div><script src="src/Line.js"></script><script src="main.js"></script></body></html>
