--- a/choice.html
+++ b/choice.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width; initial-scale=1.0;"><link rel="stylesheet" href="main.css"><script src="lib/util.js"></script><script src="lib/typed.js"></script></head><body></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+    <link rel="stylesheet" href="main.css">
+    <script src="lib/util.js"></script>
+    <script src="lib/typed.js"></script>
+</head>
+
+<body></body>
+
+</html>
