--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width; initial-scale=1.0;"><link rel="stylesheet" href="main.css"><script src="lib/util.js"></script><script src="lib/typed.js"></script></head><body><div id="console"></div><script src="src/Line.js"></script><script src="main.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;">
+    <link rel="stylesheet" href="main.css">
+    <script src="lib/util.js"></script>
+    <script src="lib/typed.js"></script>
+</head>
+
+<body>
+    <div id="console"></div>
+    <script src="src/Line.js"></script>
+    <script src="main.js"></script>
+</body>
+
+</html>
